# nohtyP

./: .gitignore  LICENSE  README.md  TODO  example.yp  syntax.md  syntax_spec.md
docs/: hatch_hatchling.md  licensing.md  syntax_spec.md
nohtyP/: dependencies.sh
nohtyP/global_utilities/: decorators.py  types.py
nohtyP/integration_tests/: stats_benchmark.py
nohtyP/lexer/: lex_tt.py  tests.py  types.py
scripts/: lex_tt.py  lexer_tokenizer.py  stats_benchmark.py  utils.py
scripts/global_utilities/: decorators.py
scripts/lexer/: lex_tt.py  lexer_tokenizer.py  tests.py
src/: README.md  __init__.py  build_hooks.py  pyproject.toml
src/dev/integration_tests/: stats_benchmark.py
src/dev/scripts/syntax_independent/: run_syntax.run
src/dev/unit_tests/: tests.py
src/global_utilities/: decorators.py
src/integration_tests/: stats_benchmark.py
src/lexer/: lex_tt.py  lexer_tokenizer.py  tests.py  types.py
src/nohtyP/: __about__.py  __init__.py  __main__.py  _buildinfo.py  _guards.py
src/nohtyP/_dev/: __init__.py
src/nohtyP/_dev/scripts/bat/: build.bat
src/nohtyP/_dev/scripts/sh/: build.sh
src/nohtyP/_dev/scripts/syntax_independent/: dependencies.run  hatch_cmds  run_syntax.run
src/nohtyP/_dev/unit_tests/: lexer.py  tests.py  tokenizer.py
src/nohtyP/_impl/: __init__.py
src/nohtyP/_impl/global_utilities/: types.py
src/nohtyP/_impl/lexer/: __init__.py  identifier.py  tokenizer.py  tt.py  types.py  utils.py
src/nohtyP/api/: __init__.py  _entrypoint.py  entrypoint.py  internal.py  public.py
src/nohtyP/global_utilities/: decorators.py  types.py
src/nohtyP/integration_tests/: stats_benchmark.py
src/nohtyP/lexer/: identifier.py  lexer.py  lexer_tt.py  tests.py  tokenizer.py  tt.py  types.py  utils.py
src/nohtyP/scripts/bat/: build.bat
src/nohtyP/scripts/sh/: build.sh  clean_cache.sh
src/nohtyP/unit_tests/: tests.py  tokenizer.py
src/scripts/bat/: clean_cache.bat
tests/: stats_benchmark.py
