# package definition

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Add custom build hooks
[tool.hatch.build.hooks]
rename_wheel = { path = "src.build_hooks" }

# [tool.hatch.build.hooks.rename_wheel]
# No extra options needed for this hook

[project]
name = "nohtyP"
version = "0.0.1"
description = "nohtyP language parser and transpiler"
requires-python = ">=3.10"
dependencies = [
]
authors = [
    {name = "DVP-F/Carnx", email = "dvpf@duck.com"},
]
# Main license only
license = "AGPL-3.0-only"
license-files = ["LICENSES/*"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    # "1 - Planning" // "2 - Pre-Alpha" // "3 - Alpha" // "4 - Beta" // "5 - Production/Stable" // "6 - Mature" // "7 - Inactive"
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing :: Linguistic",
]
readme = "README.md"
keywords = [
    "parser",
    "transpiler",
    "compiler",
    "language",
    "ast",
    "superset",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pympler",
    "numpy",
]

[project.urls]
Repository = "https://github.com/DVPDEVS/nohtyP"
Issues = "https://github.com/DVPDEVS/nohtyP/issues"

[project.scripts]
nohtyP = "nohtyP.__main__:entry"
# entry point


# === Hatchling build configuration ===

[tool.hatch.build]
skip-excluded-dirs = true

[tool.hatch.build.targets.wheel]
packages = ["src/nohtyP"]
exclude = [
  "src/nohtyP/_dev*",
  "src/nohtyP/_dev",
  # Exclude all __pycache__ directories and their contents
  "src/nohtyP/**/__pycache__",
  "src/nohtyP/**/__pycache__/**",
]
force-include = { "src/nohtyP/py.typed" = "nohtyP/py.typed" }

[tool.hatch.build.targets.wheel-dev]
packages = ["src/nohtyP"]
exclude = [
  # Exclude all __pycache__ directories and their contents
  "src/nohtyP/**/__pycache__",
  "src/nohtyP/**/__pycache__/**",
]
artifacts = [
  "src/nohtyP/_dev/**",
  "src/nohtyP/_dev",
]
force-include = { "src/nohtyP/py.typed" = "nohtyP/py.typed" }

[tool.hatch.build.targets.sdist]
packages = ["src/nohtyP"]
exclude = [
  # Exclude all __pycache__ directories and their contents
  "src/nohtyP/**/__pycache__",
  "src/nohtyP/**/__pycache__/**",
]
force-include = { "src/nohtyP/py.typed" = "nohtyP/py.typed" }

# === Hatch environment configuration ===

[tool.hatch.envs.default]
# Default environment (optional customization)
type = "virtual"
# Lock Python to 3.10+
python = ">=3.10"

[tool.hatch.envs.dev]
# This environment will install the `dev` optional-dependencies group
type = "virtual"
features = ["dev"]
# Lock Python to 3.10+
python = ">=3.10"
