# package definition

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Add custom hooks
[tool.hatch.build.hooks]
custom = { path = "build_hooks.py" }

# Version def
[tool.hatch.version]
source = "code"
path = "nohtyP/__about__.py"

[project]
dynamic = [
    "version",
    "dev_optional_dependencies",
]
name = "nohtyP"
description = "nohtyP language parser and transpiler"
requires-python = ">=3.10"
dependencies = [
]
authors = [
    {name = "DVP-F/Carnx", email = "dvpf@duck.com"},
]
# Main license only
license = "AGPL-3.0-only"
license-files = ["LICENSES/*"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    # "1 - Planning" // "2 - Pre-Alpha" // "3 - Alpha" // "4 - Beta" // "5 - Production/Stable" // "6 - Mature" // "7 - Inactive"
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing :: Linguistic",
]
readme = "README.md"
keywords = [
    "parser",
    "transpiler",
    "compiler",
    "language",
    "ast",
    "superset",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pympler",
    "numpy",
]

[project.urls]
Repository = "https://github.com/DVPDEVS/nohtyP"
Issues = "https://github.com/DVPDEVS/nohtyP/issues"
# future url i expect
Homepage = "https://pypi.org//project/nohtyP/"

[project.scripts]
nohtyP = "nohtyP.__main__:entry"
# entry point


# === Hatchling build configuration ===

[tool.hatch.build]
skip-excluded-dirs = true

[tool.hatch.build.targets.wheel]
packages = []
only-include = []
include = []
exclude = ["*"]
#! modified in build hook !

[tool.hatch.build.targets.sdist]
only-include = []
packages = []
#! modified in build hook !

# An additional build mode exists for dev package, see build scripts and the build hook

# === Hatch environment configuration ===

[tool.hatch.envs.default]
# Default environment (optional customization)
type = "virtual"
# Lock Python to 3.10+
python = ">=3.10"

[tool.hatch.envs.dev]
# This environment will install the `dev` optional-dependencies group
type = "virtual"
features = ["dev"]
# Lock Python to 3.10+
python = ">=3.10"
